client/src/styles/scrollbar.css
::-webkit-scrollbar{
    width: .5rem;
}


::-webkit-scrollbar-track{
    background:rgba(212, 212, 212, 0.356)
}

::-webkit-scrollbar-thumb{
    background-color: rgb(201, 157, 157);
}

::-webkit-scrollbar-thumb:hover{
    background-color:rgb(161, 123, 123); ;
}

